--- a/style.css
+++ b/style.css
@@ -9,17 +9,17 @@
 }
 
 body {
-  background: #141414;
   color: #e6e6e6;
-  font-family: "Urbanist", Geneva, Tahoma, sans-serif;
+  background-color: #141414;
+  font-family: "Urbanist", sans-seirf;
   font-size: 1.4rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Urbanist", Geneva, Tahoma, sans-serif;
+  font-family: "Urbanist-Black", sans-serf;
 }
 
-.container {
+container {
   position: relative;
   display: block;
   width: 100%;
@@ -43,10 +43,14 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
-.center-obj {
+.ab-header {
+  position: relative;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  background-image: url(images/abwebheader.png);
+  background-size: cover;
+  background-color: #2d37b9;
+  min-width: 960px;
+  height: 200px;
 }
 
 header {
@@ -63,54 +67,6 @@ nav {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-}
-
-.home, .about, .gallery, .learn, .smedia {
-  display: inline-block;
-  background-size: cover;
-  margin-left: 50px;
-  width: 45px;
-  height: 45px;
-}
-
-.home {
-  background-image: url(images/home.svg);
-}
-
-.home:hover {
-  background-image: url(images/homehover.svg);
-}
-
-.about {
-  background-image: url(images/about.svg);
-}
-
-.about:hover {
-  background-image: url(images/abouthover.svg);
-}
-
-.gallery {
-  background-image: url(images/gallery.svg);
-}
-
-.gallery:hover {
-  background-image: url(images/galleryhover.svg);
-}
-
-.learn {
-  background-image: url(images/learn.svg);
-}
-
-.learn:hover {
-  background-image: url(images/learnhover.svg);
-}
-
-.smedia {
-  background-image: url(images/socialmedia.svg);
-}
-
-.smedia:hover {
-  background-image: url(images/socialmediahover.svg);
 }
 
 hr {
@@ -132,12 +88,12 @@ img {
 }
 
 .primary {
-  background: #2d37b9;
+  background: #080885;
   height: 150px;
 }
 
-.second {
-  background: #258dd3;
+.secondary {
+  background: #3838b8;
   height: 150px;
 }
 
@@ -151,97 +107,5 @@ img {
 
 .center {
   text-align: center;
-}
-
-.row {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-.row-2 {
-  position: relative;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#120b69), to(#2b2db4));
-  background-image: linear-gradient(#120b69, #2b2db4);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-.row-3 {
-  position: relative;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#252525), to(#28282b));
-  background-image: linear-gradient(#252525, #28282b);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  margin-left: -15px;
-  margin-right: -15px;
-  -webkit-box-ordinal-group: 1;
-      -ms-flex-order: 0;
-          order: 0;
-}
-
-.row-col2 {
-  -ms-flex: 0 0 50%;
-  -webkit-box-flex: 0;
-          flex: 0 0 50%;
-  max-width: 50%;
-  padding: 10px;
-}
-
-.row-col2-pull {
-  -ms-flex: 0 0 50%;
-  -webkit-box-flex: 0;
-          flex: 0 0 50%;
-  max-width: 50%;
-  padding: 10px;
-  -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
-}
-
-.row-col3 {
-  -ms-flex: 0 0 32%;
-  -webkit-box-flex: 0;
-          flex: 0 0 32%;
-  max-width: 32%;
-  padding: 5px;
-}
-
-.row-col4 {
-  -mx-flex: 0 0 25%;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 25%;
-          flex: 0 0 25%;
-  max-width: 25%;
-  padding: 10px;
-}
-
-.row-col5 {
-  -ms-flex: 20%;
-  -webkit-box-flex: 20%;
-          flex: 20%;
-  max-width: 20%;
-  padding: 10px;
-}
-
-.row-col6 {
-  -ms-flex: 0 0 16.666667%;
-  -webkit-box-flex: 0;
-          flex: 0 0 16.666667%;
-  max-width: 16.666667%;
-  padding: 10px;
 }
 /*# sourceMappingURL=style.css.map */
