--- a/style.css
+++ b/style.css
@@ -82,18 +82,19 @@ iframe {
 }
 
 img {
+  width: 100%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
 .primary {
-  background: #080885;
+  background: #004E77;
   height: 150px;
 }
 
 .secondary {
-  background: #3838b8;
+  background: #C51D25;
   height: 150px;
 }
 
