--- a/style.css
+++ b/style.css
@@ -1,30 +1,35 @@
+/*Custom Font Face's */
 @font-face {
   font-family: "Urbanist";
   src: url(../fonts/Urbanist-Regular.otf);
 }
-
 @font-face {
-  font-family: "Urbanist-Black";
+  font-family: "Urbanist Black";
   src: url(../fonts/Urbanist-Black.otf);
 }
-
+@font-face {
+  font-family: "IndieFlower";
+  src: url(../fonts/IndieFlower-Regular.ttf);
+}
 body {
+  margin: 0;
+  top: 0;
   color: #e6e6e6;
   background-color: #141414;
-  font-family: "Urbanist", sans-seirf;
+  font-family: "Urbanist", Arial, sans-serif;
   font-size: 1.4rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Urbanist-Black", sans-serf;
+  font-family: "Urbanist Black", "Courier", monospace;
 }
 
 container {
   position: relative;
   display: block;
-  width: 100%;
-  padding: 18px;
-  top: 70px;
+  width: 96%;
+  padding: 25px 20px;
+  top: 180px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -91,6 +96,7 @@ img {
 .primary {
   background: #004E77;
   height: 150px;
+  font-size: 1.4rem;
 }
 
 .secondary {
@@ -109,4 +115,276 @@ img {
 .center {
   text-align: center;
 }
-/*# sourceMappingURL=style.css.map */
+
+.row {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.col {
+  width: 98%;
+  flex: 0 0 98%;
+  max-width: 98%;
+}
+
+.col2 {
+  flex: 0 0 48%;
+  max-width: 48%;
+  padding: 10px;
+}
+
+.col2-pull {
+  flex: 0 0 48%;
+  max-width: 48%;
+  padding: 10px;
+  order: 1;
+}
+
+.col3 {
+  flex: 0 0 31%;
+  max-width: 31%;
+  padding: 5px;
+}
+
+.col4 {
+  -mx-flex: 0 0 23%;
+  flex: 0 0 23%;
+  max-width: 23%;
+  padding: 10px;
+}
+
+.col5 {
+  flex: 18%;
+  max-width: 18%;
+  padding: 10px;
+}
+
+.col6 {
+  flex: 0 0 14%;
+  max-width: 14%;
+  padding: 10px;
+}
+
+/*Navigation Section */
+header {
+  display: flex;
+  position: fixed;
+}
+
+nav {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  background-color: #004E77;
+}
+nav ul {
+  list-style: none;
+}
+nav li {
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.thenav {
+  display: flex;
+  justify-content: center;
+  margin: -15px auto;
+}
+.thenav a, .thenav a:visited {
+  color: #e6e6e6;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.44rem;
+}
+.thenav a:hover {
+  font-family: "Urbanist Black", "Courier", monospace;
+  color: #e6e6e6;
+}
+
+.mnu {
+  display: none;
+  cursor: pointer;
+}
+.mnu .bar {
+  width: 25px;
+  height: 3px;
+  margin: 3px auto;
+  background-color: #e6e6e6;
+  transition: all 0.3s ease-in-out;
+}
+
+.home {
+  display: flex;
+  background-image: url(../images/AB2022Logo_1.png);
+  background-size: cover;
+  width: 100px;
+  height: 40px;
+}
+
+.home:hover {
+  background-image: url(../images/AB2022Logo_12.png);
+  background-size: cover;
+  width: 100px;
+  height: 40px;
+}
+
+.boxPrimary {
+  background-color: #004E77;
+  height: auto;
+  font-size: 1.4rem;
+  padding: 3px;
+  color: #e6e6e6;
+}
+
+.boxSecondary {
+  background-color: #C51D25;
+  height: auto;
+  font-size: 1.4rem;
+  padding: 3px;
+  color: #e6e6e6;
+}
+
+.boxAccent1 {
+  background-color: #5e5ef0;
+  font-size: 1.4rem;
+  padding: 5px;
+  color: #e6e6e6;
+}
+
+.boxAccent2 {
+  background-color: rgb(248, 117, 117);
+  font-size: 1.4rem;
+  padding: 5px;
+  color: #e6e6e6;
+}
+
+.boxAccent3 {
+  background-color: rgb(63, 62, 62);
+  font-size: 1.4rem;
+  padding: 5px;
+  color: #e6e6e6;
+}
+
+.headerPrimary {
+  background-color: #004E77;
+  padding-left: 3px;
+  padding-right: 3px;
+  height: 42px;
+  font-family: "Urbanist Black", "Courier", monospace;
+  font-size: 1.7rem;
+}
+
+@media (max-width: 600px) {
+  .col2, .col3, .col4, .col5, .col6 {
+    display: inline-block;
+    min-width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  nav {
+    min-height: 40px;
+    display: flex;
+    position: relative;
+  }
+  nav .clear {
+    clear: both;
+  }
+  nav .mnu {
+    display: flex;
+    flex-direction: column;
+    padding-left: 25px;
+  }
+  nav mnu.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  nav mnu.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  nav mnu.active .bar:nth-child(3) {
+    transform: translateY(8px) rotate(-45deg);
+  }
+
+  .home {
+    display: flex;
+    width: 100px;
+    height: 40px;
+    flex-direction: column;
+    position: relative;
+  }
+
+  .home:hover {
+    width: 100px;
+    height: 40px;
+  }
+
+  .thenav {
+    display: flex;
+    left: -120%;
+    top: 50px;
+    width: 100%;
+    padding: 4px;
+    background-color: #C51D25;
+    position: fixed;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    transition: 0.3s;
+    z-index: 1;
+  }
+  .thenav li {
+    display: block;
+    margin: 15px 0;
+  }
+  .thenav a, .thenav a:visited {
+    color: #e6e6e6;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.44rem;
+  }
+  .thenav a:hover {
+    font-family: "Urbanist Black", "Courier", monospace;
+    color: #e6e6e6;
+  }
+
+  .thenav.active {
+    left: 0;
+  }
+
+  .container {
+    width: 96%;
+    padding: 10px 20px;
+  }
+
+  .row {
+    width: 100%;
+    display: block;
+    padding: 4px;
+  }
+
+  .col2, .col3, .col4 {
+    display: inline-block;
+    min-width: 100%;
+  }
+
+  .col5 {
+    display: inline-block;
+    min-width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .col6 {
+    display: inline-block;
+    min-width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .headerPrimary {
+    font-size: 1.4rem;
+  }
+}/*# sourceMappingURL=style.css.map */
