--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@
   font-family: "Urbanist Black";
   src: url(../fonts/Urbanist-Black.otf);
 }
-@font-face {
-  font-family: "IndieFlower";
-  src: url(../fonts/IndieFlower-Regular.ttf);
-}
 body {
   margin: 0;
   top: 0;
@@ -21,62 +17,16 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Urbanist Black", "Courier", monospace;
-}
-
-.container {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding: 25px 20px;
-  top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-footer {
-  position: relative;
-  display: block;
-  width: 100%;
-  padding: 18px;
-  top: 70px;
-  margin-left: auto;
-  margin-right: auto;
+  font-family: "Urbanist Black", "Arial Black", sans-serif;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
-.ab-header {
-  position: relative;
-  display: block;
-  background-image: url(images/abwebheader.png);
-  background-size: cover;
-  background-color: #2d37b9;
-  min-width: 960px;
-  height: 200px;
-}
-
-header {
-  width: 100%;
-  position: fixed;
-  z-index: 4;
-}
-
-nav {
-  display: block;
-  background: #222;
-  width: 100%;
-  height: 50px;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 hr {
   border: 1.3px solid;
-  border-color: #258dd3;
+  border-color: #004E77;
 }
 
 iframe {
@@ -93,17 +43,6 @@ img {
   margin-right: auto;
 }
 
-.primary {
-  background: #004E77;
-  height: 150px;
-  font-size: 1.4rem;
-}
-
-.secondary {
-  background: #C51D25;
-  height: 150px;
-}
-
 .left {
   text-align: left;
 }
@@ -116,60 +55,18 @@ img {
   text-align: center;
 }
 
-.row {
-  position: relative;
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -15px;
-  margin-right: -15px;
+.justify {
+  text-align: justify;
 }
 
-.col {
-  width: 98%;
-  flex: 0 0 98%;
-  max-width: 98%;
-}
-
-.col2 {
-  flex: 0 0 48%;
-  max-width: 48%;
-  padding: 10px;
-}
-
-.col2-pull {
-  flex: 0 0 48%;
-  max-width: 48%;
-  padding: 10px;
-  order: 1;
-}
-
-.col3 {
-  flex: 0 0 31%;
-  max-width: 31%;
-  padding: 5px;
-}
-
-.col4 {
-  -mx-flex: 0 0 23%;
-  flex: 0 0 23%;
-  max-width: 23%;
-  padding: 10px;
-}
-
-.col5 {
-  flex: 18%;
-  max-width: 18%;
-  padding: 10px;
-}
-
-.col6 {
-  flex: 0 0 14%;
-  max-width: 14%;
-  padding: 10px;
+code {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 1.5rem;
 }
 
 /*Navigation Section */
 header {
+  width: 100%;
   display: flex;
   position: fixed;
 }
@@ -201,7 +98,7 @@ nav li {
   font-size: 1.44rem;
 }
 .thenav a:hover {
-  font-family: "Urbanist Black", "Courier", monospace;
+  font-family: "Urbanist Black", "Arial Black", sans-serif;
   color: #e6e6e6;
 }
 
@@ -219,63 +116,91 @@ nav li {
 
 .home {
   display: flex;
+  margin-bottom: 3px;
   background-image: url(../images/AB2022Logo_1.png);
   background-size: cover;
-  width: 103px;
-  height: 40px;
+  width: 105px;
+  height: 45px;
 }
 
 .home:hover {
   background-image: url(../images/AB2022Logo_12.png);
   background-size: cover;
-  width: 103px;
-  height: 40px;
 }
 
-.boxPrimary {
-  background-color: #004E77;
-  height: auto;
-  font-size: 1.4rem;
-  padding: 3px;
-  color: #e6e6e6;
+/*Layout Rules*/
+.container {
+  display: block;
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
-.boxSecondary {
-  background-color: #C51D25;
-  height: auto;
-  font-size: 1.4rem;
-  padding: 3px;
-  color: #e6e6e6;
+.row {
+  display: flex;
+  margin: 0 -15px;
+  padding-left: 1.5rem;
+  padding-left: 1.5rem;
 }
 
-.boxAccent1 {
-  background-color: #5e5ef0;
-  font-size: 1.4rem;
-  padding: 5px;
-  color: #e6e6e6;
+.col {
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.boxAccent2 {
-  background-color: rgb(248, 117, 117);
-  font-size: 1.4rem;
-  padding: 5px;
-  color: #e6e6e6;
+.col-50 {
+  width: 50%;
 }
 
-.boxAccent3 {
-  background-color: rgb(63, 62, 62);
-  font-size: 1.4rem;
-  padding: 5px;
-  color: #e6e6e6;
+.col-33 {
+  width: 33.33333%;
 }
 
-.headerPrimary {
-  background-color: #004E77;
-  padding-left: 3px;
-  padding-right: 3px;
-  height: 42px;
-  font-family: "Urbanist Black", "Courier", monospace;
-  font-size: 1.7rem;
+.col-25 {
+  width: 25%;
+}
+
+.col-20 {
+  width: 20%;
+}
+
+.col-16 {
+  width: 16.66666667%;
+}
+
+.col-14 {
+  width: 14.28%;
+}
+
+.col-12 {
+  width: 12.5%;
+}
+
+.col-11 {
+  width: 11.1111111111%;
+}
+
+.col-10 {
+  width: 10%;
+}
+
+.col-9 {
+  width: 9.09%;
+}
+
+.col-8 {
+  width: 8%;
+}
+
+.primary {
+  background-color: #141414;
+  border-radius: 7px;
+  border: 2.4px solid;
+  border-color: #4747e9;
 }
 
 @media (max-width: 600px) {
@@ -289,36 +214,26 @@ nav li {
     min-height: 40px;
     display: flex;
     position: relative;
-  }
-  nav .clear {
-    clear: both;
+    padding: 4px;
   }
   nav .mnu {
     display: flex;
     flex-direction: column;
-    padding-left: 25px;
+    margin-bottom: 5px;
   }
-  nav mnu.active .bar:nth-child(2) {
+  nav .mnu mnu.active .bar:nth-child(2) {
     opacity: 0;
   }
-  nav mnu.active .bar:nth-child(1) {
+  nav .mnu mnu.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
   }
-  nav mnu.active .bar:nth-child(3) {
+  nav .mnu mnu.active .bar:nth-child(3) {
     transform: translateY(8px) rotate(-45deg);
   }
 
   .home {
-    display: flex;
-    width: 103px;
-    height: 40px;
-    flex-direction: column;
-    position: relative;
-  }
-
-  .home:hover {
-    width: 103px;
-    height: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .thenav {
@@ -346,7 +261,7 @@ nav li {
     font-size: 1.44rem;
   }
   .thenav a:hover {
-    font-family: "Urbanist Black", "Courier", monospace;
+    font-family: "Urbanist Black", "Arial Black", sans-serif;
     color: #e6e6e6;
   }
 
