--- a/style.css
+++ b/style.css
@@ -68,17 +68,42 @@ code {
 header {
   width: 100%;
   display: flex;
+  background-color: #004E77;
   position: fixed;
+  top: 0px;
+  height: 50px;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  background-color: #cb0e17;
+  bottom: 0;
+  height: 80px;
 }
 
 nav {
   display: flex;
   width: 100%;
-  height: 40px;
-  background-color: #004E77;
+}
+nav a, nav a:visited {
+  color: #e6e6e6;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.44rem;
+}
+nav a:hover {
+  font-family: "Urbanist Black", "Arial Black", sans-serif;
+  color: #e6e6e6;
+}
+nav a:active {
+  font-family: "Urbanist Black", "Arial Black", sans-serif;
+  color: #cb0e17;
 }
 nav ul {
   list-style: none;
+  margin-top: 10px;
 }
 nav li {
   display: inline-block;
@@ -90,16 +115,6 @@ nav li {
   display: flex;
   justify-content: center;
   margin: -15px auto;
-}
-.thenav a, .thenav a:visited {
-  color: #e6e6e6;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.44rem;
-}
-.thenav a:hover {
-  font-family: "Urbanist Black", "Arial Black", sans-serif;
-  color: #e6e6e6;
 }
 
 .mnu {
@@ -115,12 +130,11 @@ nav li {
 }
 
 .home {
-  display: flex;
+  display: inline-block;
   margin-bottom: 3px;
   background-image: url(../images/AB2022Logo_1.png);
   background-size: cover;
-  width: 105px;
-  height: 45px;
+  width: 140px;
 }
 
 .home:hover {
@@ -132,174 +146,179 @@ nav li {
 .container {
   display: block;
   width: 100%;
+  top: 70px;
+  min-height: 500px;
+  position: relative;
   margin-right: auto;
   margin-left: auto;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+@media (min-width: 480px) {
+  .container {
+    width: 420px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 720px;
+  }
+}
 
 .row {
   display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 -15px;
   padding-left: 1.5rem;
   padding-left: 1.5rem;
 }
+@media (min-width: 768px) {
+  .row {
+    display: block;
+  }
+}
 
-.col {
+.col-1 {
+  width: 100%;
   margin: 0 15px 30px;
   box-sizing: border-box;
   padding-left: 1.3rem;
   padding-right: 1.3rem;
 }
 
-.col-50 {
+@media (min-width: 768px) {
+  col-1 {
+    width: 100%;
+  }
+}
+.col-2 {
   width: 50%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-33 {
-  width: 33.33333%;
+@media (min-width: 768px) {
+  col-2 {
+    width: 100%;
+  }
+}
+.col-3 {
+  width: 33.3333333333%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-25 {
+@media (min-width: 768px) {
+  col-3 {
+    width: 100%;
+  }
+}
+.col-4 {
   width: 25%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-20 {
+@media (min-width: 768px) {
+  col-4 {
+    width: 100%;
+  }
+}
+.col-5 {
   width: 20%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-16 {
-  width: 16.66666667%;
+@media (min-width: 768px) {
+  col-5 {
+    width: 100%;
+  }
+}
+.col-6 {
+  width: 16.6666666667%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-14 {
-  width: 14.28%;
+@media (min-width: 768px) {
+  col-6 {
+    width: 100%;
+  }
+}
+.col-7 {
+  width: 14.2857142857%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-12 {
+@media (min-width: 768px) {
+  col-7 {
+    width: 100%;
+  }
+}
+.col-8 {
   width: 12.5%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-11 {
+@media (min-width: 768px) {
+  col-8 {
+    width: 100%;
+  }
+}
+.col-9 {
   width: 11.1111111111%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
+@media (min-width: 768px) {
+  col-9 {
+    width: 100%;
+  }
+}
 .col-10 {
   width: 10%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
 }
 
-.col-9 {
-  width: 9.09%;
-}
-
-.col-8 {
-  width: 8%;
-}
-
-.primary {
-  background-color: #141414;
-  border-radius: 7px;
-  border: 2.4px solid;
-  border-color: #4747e9;
-}
-
-@media (max-width: 600px) {
-  .col2, .col3, .col4, .col5, .col6 {
-    display: inline-block;
-    min-width: 100%;
-  }
-}
-@media (max-width: 768px) {
-  nav {
-    min-height: 40px;
-    display: flex;
-    position: relative;
-    padding: 4px;
-  }
-  nav .mnu {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 5px;
-  }
-  nav .mnu mnu.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-  nav .mnu mnu.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-  nav .mnu mnu.active .bar:nth-child(3) {
-    transform: translateY(8px) rotate(-45deg);
-  }
-
-  .home {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .thenav {
-    display: flex;
-    left: -120%;
-    top: 50px;
+@media (min-width: 768px) {
+  col-10 {
     width: 100%;
-    padding: 4px;
-    background-color: #C51D25;
-    position: fixed;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    transition: 0.3s;
-    z-index: 1;
   }
-  .thenav li {
-    display: block;
-    margin: 15px 0;
-  }
-  .thenav a, .thenav a:visited {
-    color: #e6e6e6;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1.44rem;
-  }
-  .thenav a:hover {
-    font-family: "Urbanist Black", "Arial Black", sans-serif;
-    color: #e6e6e6;
-  }
+}
+.col-11 {
+  width: 9.0909090909%;
+  margin: 0 15px 30px;
+  box-sizing: border-box;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+}
 
-  .thenav.active {
-    left: 0;
-  }
-
-  .container {
-    width: 96%;
-    padding: 10px 20px;
-  }
-
-  .row {
+@media (min-width: 768px) {
+  col-11 {
     width: 100%;
-    display: block;
-    padding: 4px;
-  }
-
-  .col2, .col3, .col4 {
-    display: inline-block;
-    min-width: 100%;
-  }
-
-  .col5 {
-    display: inline-block;
-    min-width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .col6 {
-    display: inline-block;
-    min-width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .headerPrimary {
-    font-size: 1.4rem;
   }
 }/*# sourceMappingURL=style.css.map */
